--- a/src/pages/Home/Benefits/style.css
+++ b/src/pages/Home/Benefits/style.css
@@ -1300,6 +1300,197 @@
     }
 }
 
+@media only screen and (max-width:414px) {
+    .Benefits {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        margin: 0px;
+    }
+
+    .Benefits .BenefitsContainer {
+        position: relative;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-self: center;
+        align-items: center;
+        margin-bottom: 50px;
+        margin-top: 20px;
+        z-index: 1;
+    }
+
+    .Benefits h3 {
+        font-family: 'Sukhumvit Set';
+        font-size: 34px;
+        font-weight: 700;
+        line-height: 34.88px;
+        text-align: left;
+        margin-bottom: 3px;
+    }
+
+    .Benefits h4 {
+        font-family: 'Sukhumvit Set';
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 23.2px;
+        text-align: left;
+    }
+
+    .Benefits .BenefitCard {
+        position: relative;
+        right: 33px;
+    }
+
+    .Benefits .ImageContainer {
+        position: relative;
+    }
+
+    .Benefits .benefitImageOverlay {
+        position: absolute;
+        width: 80%;
+
+        top: 170px;
+        left: 145px;
+        margin: 0px;
+
+        transform: translate(-30%, -20%);
+        color: white;
+        text-align: left;
+    }
+
+    .Benefits .searchHospitalImageOverlay {
+        position: absolute;
+        width: 93%;
+
+        top: 170px;
+        left: 160px;
+
+        transform: translate(-30%, -20%);
+        color: white;
+        text-align: left;
+    }
+
+    .Benefits .articleImageOverlay {
+        position: absolute;
+        width: 90%;
+
+        top: 170px;
+        left: 160px;
+
+        transform: translate(-30%, -20%);
+        color: white;
+        text-align: left;
+    }
+
+    .Benefits .link {
+        font-size: 12px;
+        font-weight: 500;
+        font-family: 'Sukhumvit Set Thin';
+        color: white;
+        text-decoration: none;
+        width: 100%;
+    }
+
+    .Benefits .benefitspic-container {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        margin-left: 16px;
+    }
+
+    .Benefits .benefitspic-overlay {
+        position: absolute;
+        top: 19px;
+        left: 23px;
+        width: 97%;
+        height: 82%;
+        border-radius: 8px;
+        background-color: rgba(0, 96, 92, 0.5);
+        transition: opacity 0.3s ease;
+        opacity: 0;
+    }
+
+    .Benefits .benefitspic-container:hover .benefitspic-overlay {
+        opacity: 1;
+
+    }
+
+    .Benefits .benefitspic-container .benefitspic {
+        width: 110%;
+        height: 110%;
+        
+        object-fit: cover;
+
+
+    }
+
+    .Benefits .searchHospitalpic-container .searchHospitalpic {
+        width: 110%;
+        height: 110%;
+        margin: 0px;
+        /* top: 664px;
+        left: 573px; */
+        object-fit: cover;
+    }
+
+    .Benefits .searchHospitalpic-container {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        margin-left: 16px;
+    }
+
+    .Benefits .searchHospitalpic-overlay {
+        position: absolute;
+        top: 22px;
+        left: 23px;
+        width:97%;
+        height: 81%;
+        ;
+        border-radius: 8px;
+        background-color: rgba(0, 96, 92, 0.5);
+        transition: opacity 0.3s ease;
+        opacity: 0;
+    }
+
+    .Benefits .searchHospitalpic-container:hover .searchHospitalpic-overlay {
+        opacity: 1;
+    }
+
+    .Benefits .articlepic-container .articlepic {
+        width: 110%;
+        height: 110%;
+        margin: 0px;
+        top: 664px;
+        left: 884px;
+        object-fit: cover;
+    }
+
+    .Benefits .articlepic-container {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        margin-left: 16px;
+    }
+
+    .Benefits .articlepic-overlay {
+        position: absolute;
+        top: 20px;
+        left: 23px;
+        width: 97%;
+        height: 82%;
+        border-radius: 8px;
+        background-color: rgba(0, 96, 92, 0.5);
+        transition: opacity 0.3s ease;
+        opacity: 0;
+    }
+
+    .Benefits .articlepic-container:hover .articlepic-overlay {
+        opacity: 1;
+    }
+}
+
 @media only screen and (max-width:410px) {
     .Benefits {
         display: flex;
@@ -1396,13 +1587,14 @@
         position: relative;
         width: 100%;
         height: 100%;
+        margin-left: 16px;
     }
 
     .Benefits .benefitspic-overlay {
         position: absolute;
         top: 19px;
-        left: 25px;
-        width: 106%;
+        left: 23px;
+        width: 97%;
         height: 82%;
         border-radius: 8px;
         background-color: rgba(0, 96, 92, 0.5);
@@ -1416,17 +1608,17 @@
     }
 
     .Benefits .benefitspic-container .benefitspic {
-        width: 120%;
-        height: 120%;
-        margin: 0px;
+        width: 110%;
+        height: 110%;
+        
         object-fit: cover;
 
 
     }
 
     .Benefits .searchHospitalpic-container .searchHospitalpic {
-        width: 120%;
-        height: 120%;
+        width: 110%;
+        height: 110%;
         margin: 0px;
         /* top: 664px;
         left: 573px; */
@@ -1437,13 +1629,14 @@
         position: relative;
         width: 100%;
         height: 100%;
+        margin-left: 16px;
     }
 
     .Benefits .searchHospitalpic-overlay {
         position: absolute;
-        top: 25px;
-        left: 27px;
-        width: 106%;
+        top: 22px;
+        left: 23px;
+        width:97%;
         height: 81%;
         ;
         border-radius: 8px;
@@ -1457,8 +1650,8 @@
     }
 
     .Benefits .articlepic-container .articlepic {
-        width: 120%;
-        height: 120%;
+        width: 110%;
+        height: 110%;
         margin: 0px;
         top: 664px;
         left: 884px;
@@ -1469,13 +1662,14 @@
         position: relative;
         width: 100%;
         height: 100%;
+        margin-left: 16px;
     }
 
     .Benefits .articlepic-overlay {
         position: absolute;
         top: 20px;
-        left: 25px;
-        width: 105%;
+        left: 23px;
+        width: 97%;
         height: 82%;
         border-radius: 8px;
         background-color: rgba(0, 96, 92, 0.5);
@@ -1505,7 +1699,6 @@
         align-items: center;
         margin-bottom: 50px;
         margin-top: 20px;
-        width: 100%;
         z-index: 1;
     }
 
@@ -1528,7 +1721,7 @@
 
     .Benefits .BenefitCard {
         position: relative;
-        right: 20px;
+        right: 33px;
     }
 
     .Benefits .ImageContainer {
@@ -1537,9 +1730,9 @@
 
     .Benefits .benefitImageOverlay {
         position: absolute;
-        width: 90%;
+        width: 80%;
 
-        top: 150px;
+        top: 170px;
         left: 145px;
         margin: 0px;
 
@@ -1553,9 +1746,9 @@
         width: 93%;
 
         top: 170px;
-        left: 150px;
+        left: 160px;
 
-        transform: translate(-30%, -40%);
+        transform: translate(-30%, -20%);
         color: white;
         text-align: left;
     }
@@ -1565,9 +1758,9 @@
         width: 90%;
 
         top: 170px;
-        left: 145px;
+        left: 160px;
 
-        transform: translate(-30%, -30%);
+        transform: translate(-30%, -20%);
         color: white;
         text-align: left;
     }
@@ -1585,14 +1778,15 @@
         position: relative;
         width: 100%;
         height: 100%;
+        margin-left: 16px;
     }
 
     .Benefits .benefitspic-overlay {
         position: absolute;
-        top: 20px;
-        left: 22px;
+        top: 19px;
+        left: 23px;
         width: 97%;
-        height: 81%;
+        height: 82%;
         border-radius: 8px;
         background-color: rgba(0, 96, 92, 0.5);
         transition: opacity 0.3s ease;
@@ -1607,7 +1801,7 @@
     .Benefits .benefitspic-container .benefitspic {
         width: 110%;
         height: 110%;
-        margin: 0px;
+        
         object-fit: cover;
 
 
@@ -1617,7 +1811,8 @@
         width: 110%;
         height: 110%;
         margin: 0px;
-        
+        /* top: 664px;
+        left: 573px; */
         object-fit: cover;
     }
 
@@ -1625,13 +1820,14 @@
         position: relative;
         width: 100%;
         height: 100%;
+        margin-left: 16px;
     }
 
     .Benefits .searchHospitalpic-overlay {
         position: absolute;
-        top: 20px;
-        left: 25px;
-        width: 96%;
+        top: 22px;
+        left: 23px;
+        width:97%;
         height: 81%;
         ;
         border-radius: 8px;
@@ -1657,14 +1853,15 @@
         position: relative;
         width: 100%;
         height: 100%;
+        margin-left: 16px;
     }
 
     .Benefits .articlepic-overlay {
         position: absolute;
-        top: 21px;
-        left: 22px;
+        top: 20px;
+        left: 23px;
         width: 97%;
-        height: 81%;
+        height: 82%;
         border-radius: 8px;
         background-color: rgba(0, 96, 92, 0.5);
         transition: opacity 0.3s ease;
